--- a/bpcs-scorecard-v2/index.html
+++ b/bpcs-scorecard-v2/index.html
@@ -166,8 +166,9 @@
             </div>
           </section>
         </div>
-        <!-- Your Page Content Here -->
 
+        <div class='row bpcs-metrics'>
+        </div>
       </section>
       <!-- /.content -->
     </div>
