--- a/bpcs-v4/careers.html
+++ b/bpcs-v4/careers.html
@@ -32,7 +32,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="assets/img/bpcs-logo-white.png" alt="" class="img-responsive" />
+          <img src="assets/img/bpcs-logo.png" alt="Blueprint Consulting Services" class="img-responsive" />
         </a>
       </div>
       <div class="navbar-collapse collapse navbar-right scroll-me">
@@ -149,7 +149,6 @@
 
   <!-- CUSTOM SCRIPTS   -->
 
-  <script src="assets/js/payboard.js"></script>
   <script src="assets/js/googleanalytics.js"></script>
   <script src="assets/js/custom.js"></script>
   <script src="assets/js/greenhouse.js"></script>
