--- a/bpcs-v4/connect.html
+++ b/bpcs-v4/connect.html
@@ -180,7 +180,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="assets/img/bpcs-logo-white.png" alt="" class="img-responsive" />
+          <img src="assets/img/bpcs-logo.png" alt="Blueprint Consulting Services" class="img-responsive" />
         </a>
       </div>
       <div class="navbar-collapse collapse navbar-right scroll-me">
@@ -438,7 +438,6 @@
   <script src="assets/js/jquery.easing.min.js"></script>
   <script src="assets/js/tabletop.js"></script>
   <script src="assets/js/custom.js"></script>
-  <script src="assets/js/payboard.js"></script>
   <script src="assets/js/googleanalytics.js"></script>
   <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
@@ -457,7 +456,7 @@
   <script type='text/javascript'>
   $(document).ready(function() {
     getBlogData(6);
-    
+
   });
 
   </script>
