--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -35,7 +35,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#">
-          <img src="assets/img/bpcs-logo-white.png" alt="" class="img-responsive" />
+          <img src="assets/img/bpcs-logo.png" alt="Blueprint Consulting Services" class="img-responsive" />
         </a>
       </div>
       <div class="navbar-collapse collapse navbar-right scroll-me">
@@ -60,9 +60,9 @@
           </div>
           <p class="p-cls"></p>
           <div class="row text-center">
-            <img class='awardLink hero-award award-location-3' src="assets/img/awards/washington_fastest_growing_2015_white.png" alt="Blueprint takes #2 spot in the Puget Sound Business Journal's Top 100 Washington's fastest growing private companies">
-            <img class='awardLink hero-award award-location-1' src="assets/img/awards/fastest_growing_2015_white.png" alt="Blueprint wins Eastside's Fastest Growing Company of 2015 award">
-            <img class='awardLink hero-award award-location-2' src="assets/img/awards/inc-5000-white.png" alt="Inc 500 award">
+            <img class='awardLink hero-award award-location-3' src="assets/img/awards/fastest_growing_2016_white.png" alt="Blueprint wins Eastside's Fastest Growing Company of 2016 award">
+            <img class='awardLink hero-award award-location-1' src="assets/img/awards/washington_fastest_growing_2015_white.png" alt="Blueprint takes #1 spot in the Puget Sound Business Journal's Top 100 Washington's fastest growing private companies">
+            <img class='awardLink hero-award award-location-2' src="assets/img/awards/fastest_growing_2015_white.png" alt="Blueprint wins Eastside's Fastest Growing Company of 2015 award">
             <div class='col-md-6 col-md-offset-3'>
               <button onClick="location.href='solutions.html'" class="btn btn-callToAction btn-block">See our solutions</button>
             </div>
@@ -195,7 +195,6 @@
   <script src="assets/js/jquery.easing.min.js"></script>
   <script src="assets/js/tabletop.js"></script>
   <script src="assets/js/custom.js"></script>
-  <script src="assets/js/payboard.js"></script>
   <script src="assets/js/googleanalytics.js"></script>
   <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
