--- a/bpcs-v4/solutions.html
+++ b/bpcs-v4/solutions.html
@@ -32,7 +32,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="assets/img/bpcs-logo-white.png" alt="" class="img-responsive" />
+          <img src="assets/img/bpcs-logo.png" alt="" class="img-responsive" />
         </a>
       </div>
       <div class="navbar-collapse collapse navbar-right scroll-me">
@@ -222,6 +222,11 @@
       <div class="row">
         <div class="col-md-3">
           <div class='white-paper-entry'>
+            <a href='http://www.bizjournals.com/seattle/morning_call/2015/07/blueprint-consulting-services-earned-eastside.html' target='blank'><img class='img-responsive' src="assets/img/awards/fastest_growing_2016.png" alt="2016 Eastside Fasting Growing Companies"></a>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class='white-paper-entry'>
             <a href='http://www.bizjournals.com/seattle/blog/techflash/2015/10/correction-blueprint-consulting-is-state-s.html' target='blank'><img class='img-responsive' src="assets/img/awards/washington_fastest_growing_2015.png" alt="PSBJ Top 100 Fastest Growing Private Companies"></a>
           </div>
         </div>
@@ -235,13 +240,14 @@
             <a href='http://www.bizjournals.com/seattle/morning_call/2015/07/blueprint-consulting-services-earned-eastside.html' target='blank'><img class='img-responsive' src="assets/img/awards/fastest_growing_2015.png" alt="2015 Eastside Fasting Growing Companies"></a>
           </div>
         </div>
+
+      </div>
+      <div class="row">
         <div class="col-md-3">
           <div class='white-paper-entry'>
             <a href='http://www.bellevuechamber.org/?page=EBA' target='blank'><img class='img-responsive' src="assets/img/awards/innovativeProduct_2015.png" alt="2015 Innovative Product of the Year"></a>
           </div>
         </div>
-      </div>
-      <div class="row">
         <div class="col-md-3">
           <div class='white-paper-entry'>
             <a href='http://www.bizjournals.com/seattle/blog/health-care-inc/2014/09/washingtons-fastest-growing-private-companies.html' target='blank'><img class='img-responsive' src="assets/img/awards/washingtonFastest_2014.png" alt="2014 Fast Growing Washington Company"></a>
@@ -255,17 +261,21 @@
         <div class="col-md-3">
           <a href='http://www.bizjournals.com/seattle/blog/2014/05/eastside-fastest-growing-private-companies.html' target='blank'><img class='img-responsive' src="assets/img/awards/fastest_growing_2014.png" alt="..."></a>
         </div>
+
+      </div>
+      <div class='row'>
         <div class="col-md-3">
           <div class='white-paper-entry'>
             <a href='http://www.inc.com/profile/blueprint-consulting-services' target='blank'><img class='img-responsive' src="assets/img/awards/inc-5000-2015.png" alt="..."></a>
           </div>
         </div>
+
       </div>
       <div class='row'>
-        <div class="col-md-4 text-center">
+        <div class="col-md-3 text-center">
           <img src='assets/img/client_logos/microsoft-partner-logo.png'>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-md-3 text-center">
           <img src='assets/img/mpsp_logo_web.jpg'>
         </div>
       </div>
@@ -328,7 +338,6 @@
   <script src="assets/js/jquery.easing.min.js"></script>
   <script src="assets/js/tabletop.js"></script>
   <script src="assets/js/custom.js"></script>
-  <script src="assets/js/payboard.js"></script>
   <script src="assets/js/googleanalytics.js"></script>
   <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
