--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -61,17 +61,15 @@
           <p class="p-cls"></p>
           <div class="row text-center">
             <img class='awardLink hero-award award-location-3' src="assets/img/awards/fastest_growing_2016_white.png" alt="Blueprint wins Eastside's Fastest Growing Company of 2016 award">
+            <img class='awardLink hero-award award-location-2' src="assets/img/awards/2016_PSBJ_Best_Workplace_White.png" alt="Blueprint wins PSBJ Washington's Best Workplace of 2016 award">
             <img class='awardLink hero-award award-location-1' src="assets/img/awards/washington_fastest_growing_2015_white.png" alt="Blueprint takes #1 spot in the Puget Sound Business Journal's Top 100 Washington's fastest growing private companies">
-            <img class='awardLink hero-award award-location-2' src="assets/img/awards/fastest_growing_2015_white.png" alt="Blueprint wins Eastside's Fastest Growing Company of 2015 award">
-          </div>
-
-          <div class="row text-center">
-            <img class='awardLink hero-award award-location-3' src="assets/img/awards/fastest_growing_2016_white.png" alt="Blueprint wins Eastside's Fastest Growing Company of 2016 award">
-            <img class='awardLink hero-award award-location-1' src="assets/img/awards/washington_fastest_growing_2015_white.png" alt="Blueprint takes #1 spot in the Puget Sound Business Journal's Top 100 Washington's fastest growing private companies">
-            <!--<div class='col-md-6 col-md-offset-3'>
-              <button onClick="location.href='solutions.html'" class="btn btn-callToAction btn-block">See our solutions</button>
-            </div>-->
-            <div class='arrow bounce'>
+            <p class="p-cls"></p>
+            <div class="row text-center">
+                <div class='col-md-6 col-md-offset-3'>
+                    <button onClick="location.href='work.html'" class="btn btn-callToAction btn-block">See our solutions</button>
+                </div>
+                <div class='arrow bounce'>
+                </div>
             </div>
           </div>
 
