--- a/bpcs-v4/practice/applied-analytics.html
+++ b/bpcs-v4/practice/applied-analytics.html
@@ -93,7 +93,7 @@
               Interaction is a key component to business intelligence. Standard dashboard solutions typically focus on data views that matter to a single individual or a select group and lack the personalized communication necessary to extract real value from your data.
             </p>
             <p>
-              At Blueprint Consulting Services, we believe that true insight comes from inquiry; the ability for you to build your own understanding quickly and easily from the information provided. Our applied analytics solutions expose interaction through a variety of mediums, from intuitive and compelling dashboards and scorecards to augmented (AR) and virtual reality (VR) applications that expose, enhance and enable next generation data interaction.
+              At Blueprint Consulting Services, we believe that true insight comes from inquiry; the ability for you to build your own understanding quickly and easily from the information provided. Our applied analytics solutions manifest insight through a variety of approaches, from intuitive and compelling dashboards and scorecards to augmented (AR) and virtual reality (VR) applications that expose, enhance and enable next generation data interaction.
             </p>
           </div>
 
