--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -138,7 +138,7 @@
       <div class="row">
 
         <div class="col-md-4">
-          <img src="img/me.png" alt="This is me" class="img-circle">
+          <img src="https://media.licdn.com/dms/image/C5603AQGq_a_gsKLi1w/profile-displayphoto-shrink_200_200/0?e=1534982400&v=beta&t=otO6bL42wiGseVr-XOo6nRB3W-XLmu_BVCtu0R9vpKg" alt="This is me" class="img-circle">
         </div>
         <div class="col-m-8">
 
