--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -119,7 +119,7 @@
 
   <!-- Page Header -->
   <!-- Set your background image for this header on the line below. -->
-  <header class="intro-header" style="background-image: url('https://media.licdn.com/dms/image/C5603AQGq_a_gsKLi1w/profile-displayphoto-shrink_200_200/0?e=1534982400&v=beta&t=otO6bL42wiGseVr-XOo6nRB3W-XLmu_BVCtu0R9vpKg')">
+  <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
