--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -150,7 +150,7 @@
             integration/deployment) and treated as creative problem solvers. <a href='developer.html'>Learn more about me as a developer</a>.
           </p>
           <p>
-            <b>As an entrepreneur, </b>I am driven by a desire to crush the competition, addicted to the effort required to become an expert, and learn from my failures. <a href='entrepreneur.html'>Learn more about me as an entrepreneur</a>.
+            <b>As an entrepreneur, </b>I am addicted to the effort required to become an expert, and learn from my failures. <a href='entrepreneur.html'>Learn more about me as an entrepreneur</a>.
           </p>
         </div>
       </div>
@@ -190,7 +190,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; GaryNakanelua.com 2016</p>
+          <p class="copyright text-muted">Copyright &copy; GaryNakanelua.com 2018</p>
         </div>
       </div>
     </div>
